#DMS-397 Added a new field to parts table
