# storage/api-docs/api-docs.json
@@ -241,6 +241,15 @@
                         }
                     },
                     {
+                        "name": "alternative_number",
+                        "in": "query",
+                        "description": "Alternative Number",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
                         "name": "sku",
                         "in": "query",
                         "description": "Part sku",
@@ -545,6 +554,15 @@
                         "name": "title",
                         "in": "query",
                         "description": "Part title",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "alternative_number",
+                        "in": "query",
+                        "description": "Alternative Number",
                         "required": false,
                         "schema": {
                             "type": "string"
